problemas de rutas generales con botones arreglado y funcionalidades página inventario admin agregadas
Funcionalidad CRUD para inventario implementada con el estilo visual actual de la Ferretería mamalona.

--- a/web/index.html
+++ b/web/index.html
@@ -31,6 +31,14 @@
 
   <title>inventario_ferreteria</title>
   <link rel="manifest" href="manifest.json">
+  
+  <!-- Firebase compatibility configuration -->
+  <script>
+    // Configure Firebase for better web compatibility
+    if (typeof window !== 'undefined') {
+      window.flutterfire_ignore_scripts = true;
+    }
+  </script>
 </head>
 <body>
   <script src="flutter_bootstrap.js" async></script>
